--- a/package.yaml
+++ b/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- bytestring
 - data-default
 - directory
 - filepath
@@ -33,7 +34,9 @@ dependencies:
 - random
 - retry
 - temporary
+- time
 - transformers
+- unix
 - webdriver
 
 library:
