--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
-name:                hspec-webdriver-simple
+name:                hspec-webdriver-toolkit
 version:             0.1.0.0
-github:              "githubuser/hspec-webdriver-simple"
+github:              "githubuser/hspec-webdriver-toolkit"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2019 Author name here"
+author:              "Tom McLaughlin"
+maintainer:          "tom@codedown.io"
+copyright:           "2019 Tom McLaughlin"
 
 extra-source-files:
 - README.md
@@ -56,7 +56,7 @@ library:
   source-dirs: src
 
 executables:
-  hspec-webdriver-simple-exe:
+  hspec-webdriver-toolkit-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -64,10 +64,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - hspec-webdriver-simple
+    - hspec-webdriver-toolkit
 
 tests:
-  hspec-webdriver-simple-test:
+  hspec-webdriver-toolkit-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -75,4 +75,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - hspec-webdriver-simple
+    - hspec-webdriver-toolkit
