Change sessionMap to be Data.Map, trying to get all session history

--- a/stack.yaml
+++ b/stack.yaml
@@ -5,4 +5,7 @@ packages:
 - .
 
 extra-deps:
-- webdriver-0.9.0.1 # Earlier versions were failing on simple operations with BadJSON error
+# - webdriver-0.9.0.1 # Earlier versions were failing on simple operations with BadJSON error
+
+- github: codedownio/hs-webdriver
+  commit: 96019af419a5bf4c444ef1c8341db33b23dcc03a
