Add a couple more libraries

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ addons:
   apt:
     packages:
       - libx11-dev
+      - libxinerama-dev
+      - libxrandr-dev
 
 # Caching so the next build will be fast too.
 cache:
