--- a/hspec-webdriver-toolkit.cabal
+++ b/hspec-webdriver-toolkit.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.31.2.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 35bb19d28172b9091180ff203fe50883819b2a9f09190bf0dceebfe583113d5a
+-- hash: 1a6280fd32a21cbfae874a342f40662a55825ea244c04ace3b2d76cccc208c2a
 
 name:           hspec-webdriver-toolkit
 version:        0.1.0.0
@@ -49,6 +49,7 @@ library
       Test.Hspec.WebDriver.Internal.Types
       Test.Hspec.WebDriver.Internal.Util
       Test.Hspec.WebDriver.Internal.WebDriver
+      Test.Hspec.WebDriver.Internal.Websockets
       Test.Hspec.WebDriver.Internal.Wrap
       Paths_hspec_webdriver_toolkit
   hs-source-dirs:
